src/parser/SvgParser.java
// $ANTLR 3.4 /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g 2015-04-29 21:00:44

package parser;
import interp.SvgTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


/**
 * Copyright (c) 2011, Jordi Cortadella
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *    * Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *    * Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *    * Neither the name of the <organization> nor the
 *      names of its contributors may be used to endorse or promote products
 *      derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class SvgParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARGLIST", "ARRAY", "ASSIGN", "BOOLEAN", "CIRCLE", "COMMENT", "COMP_EQUAL", "COORD", "CREATE", "DESTROY", "DIV", "ELIF", "ELLIPSE", "ELSE", "ENDFUNC", "ENDIF", "EQUAL", "ESC_SEQ", "FALSE", "FLOAT", "FOR", "FUNC", "FUNCALL", "GE", "GT", "ID", "IF", "INT", "ITE", "LE", "LINE", "LIST_ATTR", "LIST_COORD", "LIST_FUNCTIONS", "LIST_INSTR", "LPAREN", "LT", "MINUS", "MOD", "MODIFY", "MOVE", "MUL", "NOT", "NOT_EQUAL", "OR", "PARAMS", "PLUS", "POLYGON", "PREF", "PVALUE", "READ", "RECTANGLE", "RETURN", "RGB", "ROTATE", "RPAREN", "SCALE", "SOURCE", "STRING", "TEXT", "THEN", "TRUE", "WRITE", "WS", "'&'", "','", "':'", "';'", "'['", "']'", "'alternate'", "'blue'", "'bold'", "'bolder'", "'dots'", "'fill'", "'fill-opacity'", "'font-style'", "'font-weight'", "'green'", "'horizontal'", "'italic'", "'lighter'", "'line-pattern'", "'line-width'", "'lines'", "'normal'", "'oblique'", "'orientation'", "'red'", "'vertical'", "'yellow'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__95=95;
    public static final int T__96=96;
    public static final int T__97=97;
    public static final int T__98=98;
    public static final int AND=4;
    public static final int ARGLIST=5;
    public static final int ARRAY=6;
    public static final int ASSIGN=7;
    public static final int BOOLEAN=8;
    public static final int CIRCLE=9;
    public static final int COMMENT=10;
    public static final int COMP_EQUAL=11;
    public static final int COORD=12;
    public static final int CREATE=13;
    public static final int DESTROY=14;
    public static final int DIV=15;
    public static final int ELIF=16;
    public static final int ELLIPSE=17;
    public static final int ELSE=18;
    public static final int ENDFUNC=19;
    public static final int ENDIF=20;
    public static final int EQUAL=21;
    public static final int ESC_SEQ=22;
    public static final int FALSE=23;
    public static final int FLOAT=24;
    public static final int FOR=25;
    public static final int FUNC=26;
    public static final int FUNCALL=27;
    public static final int GE=28;
    public static final int GT=29;
    public static final int ID=30;
    public static final int IF=31;
    public static final int INT=32;
    public static final int ITE=33;
    public static final int LE=34;
    public static final int LINE=35;
    public static final int LIST_ATTR=36;
    public static final int LIST_COORD=37;
    public static final int LIST_FUNCTIONS=38;
    public static final int LIST_INSTR=39;
    public static final int LPAREN=40;
    public static final int LT=41;
    public static final int MINUS=42;
    public static final int MOD=43;
    public static final int MODIFY=44;
    public static final int MOVE=45;
    public static final int MUL=46;
    public static final int NOT=47;
    public static final int NOT_EQUAL=48;
    public static final int OR=49;
    public static final int PARAMS=50;
    public static final int PLUS=51;
    public static final int POLYGON=52;
    public static final int PREF=53;
    public static final int PVALUE=54;
    public static final int READ=55;
    public static final int RECTANGLE=56;
    public static final int RETURN=57;
    public static final int RGB=58;
    public static final int ROTATE=59;
    public static final int RPAREN=60;
    public static final int SCALE=61;
    public static final int SOURCE=62;
    public static final int STRING=63;
    public static final int TEXT=64;
    public static final int THEN=65;
    public static final int TRUE=66;
    public static final int WRITE=67;
    public static final int WS=68;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SvgParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SvgParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SvgParser.tokenNames; }
    public String getGrammarFileName() { return "/home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        SvgTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:66:1: prog : ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) ;
    public final SvgParser.prog_return prog() throws RecognitionException {
        SvgParser.prog_return retval = new SvgParser.prog_return();
        retval.start = input.LT(1);


        SvgTree root_0 = null;

        Token EOF2=null;
        SvgParser.func_return func1 =null;


        SvgTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_func=new RewriteRuleSubtreeStream(adaptor,"rule func");
        try {
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:66:9: ( ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) )
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:66:11: ( func )+ EOF
            {
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:66:11: ( func )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNC) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:66:11: func
            	    {
            	    pushFollow(FOLLOW_func_in_prog208);
            	    func1=func();

            	    state._fsp--;

            	    stream_func.add(func1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog211);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: func
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (SvgTree)adaptor.nil();
            // 66:21: -> ^( LIST_FUNCTIONS ( func )+ )
            {
                // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:66:24: ^( LIST_FUNCTIONS ( func )+ )
                {
                SvgTree root_1 = (SvgTree)adaptor.nil();
                root_1 = (SvgTree)adaptor.becomeRoot(
                (SvgTree)adaptor.create(LIST_FUNCTIONS, "LIST_FUNCTIONS")
                , root_1);

                if ( !(stream_func.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_func.hasNext() ) {
                    adaptor.addChild(root_1, stream_func.nextTree());

                }
                stream_func.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (SvgTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (SvgTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class func_return extends ParserRuleReturnScope {
        SvgTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "func"
    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:70:1: func : FUNC ^ ID params '{' ! block_instructions '}' !;
    public final SvgParser.func_return func() throws RecognitionException {
        SvgParser.func_return retval = new SvgParser.func_return();
        retval.start = input.LT(1);


        SvgTree root_0 = null;

        Token FUNC3=null;
        Token ID4=null;
        Token char_literal6=null;
        Token char_literal8=null;
        SvgParser.params_return params5 =null;

        SvgParser.block_instructions_return block_instructions7 =null;


        SvgTree FUNC3_tree=null;
        SvgTree ID4_tree=null;
        SvgTree char_literal6_tree=null;
        SvgTree char_literal8_tree=null;

        try {
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:70:9: ( FUNC ^ ID params '{' ! block_instructions '}' !)
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:70:11: FUNC ^ ID params '{' ! block_instructions '}' !
            {
            root_0 = (SvgTree)adaptor.nil();


            FUNC3=(Token)match(input,FUNC,FOLLOW_FUNC_in_func253); 
            FUNC3_tree = 
            (SvgTree)adaptor.create(FUNC3)
            ;
            root_0 = (SvgTree)adaptor.becomeRoot(FUNC3_tree, root_0);


            ID4=(Token)match(input,ID,FOLLOW_ID_in_func256); 
            ID4_tree = 
            (SvgTree)adaptor.create(ID4)
            ;
            adaptor.addChild(root_0, ID4_tree);


            pushFollow(FOLLOW_params_in_func258);
            params5=params();

            state._fsp--;

            adaptor.addChild(root_0, params5.getTree());

            char_literal6=(Token)match(input,97,FOLLOW_97_in_func260); 

            pushFollow(FOLLOW_block_instructions_in_func263);
            block_instructions7=block_instructions();

            state._fsp--;

            adaptor.addChild(root_0, block_instructions7.getTree());

            char_literal8=(Token)match(input,98,FOLLOW_98_in_func265); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (SvgTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (SvgTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "func"


    public static class params_return extends ParserRuleReturnScope {
        SvgTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "params"
    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:74:1: params : '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) ;
    public final SvgParser.params_return params() throws RecognitionException {
        SvgParser.params_return retval = new SvgParser.params_return();
        retval.start = input.LT(1);


        SvgTree root_0 = null;

        Token char_literal9=null;
        Token char_literal11=null;
        SvgParser.paramlist_return paramlist10 =null;


        SvgTree char_literal9_tree=null;
        SvgTree char_literal11_tree=null;
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleSubtreeStream stream_paramlist=new RewriteRuleSubtreeStream(adaptor,"rule paramlist");
        try {
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:74:9: ( '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) )
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:74:11: '(' ( paramlist )? ')'
            {
            char_literal9=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_params285);  
            stream_LPAREN.add(char_literal9);


            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:74:15: ( paramlist )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID||LA2_0==69) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:74:15: paramlist
                    {
                    pushFollow(FOLLOW_paramlist_in_params287);
                    paramlist10=paramlist();

                    state._fsp--;

                    stream_paramlist.add(paramlist10.getTree());

                    }
                    break;

            }


            char_literal11=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_params290);  
            stream_RPAREN.add(char_literal11);


            // AST REWRITE
            // elements: paramlist
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (SvgTree)adaptor.nil();
            // 74:30: -> ^( PARAMS ( paramlist )? )
            {
                // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:74:33: ^( PARAMS ( paramlist )? )
                {
                SvgTree root_1 = (SvgTree)adaptor.nil();
                root_1 = (SvgTree)adaptor.becomeRoot(
                (SvgTree)adaptor.create(PARAMS, "PARAMS")
                , root_1);

                // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:74:42: ( paramlist )?
                if ( stream_paramlist.hasNext() ) {
                    adaptor.addChild(root_1, stream_paramlist.nextTree());

                }
                stream_paramlist.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (SvgTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (SvgTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "params"


    public static class paramlist_return extends ParserRuleReturnScope {
        SvgTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "paramlist"
    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:78:1: paramlist : param ( ',' ! param )* ;
    public final SvgParser.paramlist_return paramlist() throws RecognitionException {
        SvgParser.paramlist_return retval = new SvgParser.paramlist_return();
        retval.start = input.LT(1);


        SvgTree root_0 = null;

        Token char_literal13=null;
        SvgParser.param_return param12 =null;

        SvgParser.param_return param14 =null;


        SvgTree char_literal13_tree=null;

        try {
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:78:10: ( param ( ',' ! param )* )
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:78:12: param ( ',' ! param )*
            {
            root_0 = (SvgTree)adaptor.nil();


            pushFollow(FOLLOW_param_in_paramlist316);
            param12=param();

            state._fsp--;

            adaptor.addChild(root_0, param12.getTree());

            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:78:18: ( ',' ! param )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==70) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:78:19: ',' ! param
            	    {
            	    char_literal13=(Token)match(input,70,FOLLOW_70_in_paramlist319); 

            	    pushFollow(FOLLOW_param_in_paramlist322);
            	    param14=param();

            	    state._fsp--;

            	    adaptor.addChild(root_0, param14.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (SvgTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (SvgTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "paramlist"


    public static class param_return extends ParserRuleReturnScope {
        SvgTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "param"
    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:83:1: param : ( '&' id= ID -> ^( PREF[$id,$id.text] ) |id= ID -> ^( PVALUE[$id,$id.text] ) );
    public final SvgParser.param_return param() throws RecognitionException {
        SvgParser.param_return retval = new SvgParser.param_return();
        retval.start = input.LT(1);


        SvgTree root_0 = null;

        Token id=null;
        Token char_literal15=null;

        SvgTree id_tree=null;
        SvgTree char_literal15_tree=null;
        RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:83:9: ( '&' id= ID -> ^( PREF[$id,$id.text] ) |id= ID -> ^( PVALUE[$id,$id.text] ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==69) ) {
                alt4=1;
            }
            else if ( (LA4_0==ID) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /home/jordivilaseca/FIB/CL/CL-Animation/src/parser/Svg.g:83:13: '&' id= ID
                    {
                    char_literal15=(Token)match(input,69,FOLLOW_69_in_param347);  
                    stream_69.add(char_literal15);


                    id=(Token)match(input,ID,FOLLOW_ID_in_param351);  
                    stream_ID.add(id);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
